<resources>
    <string name="app_name">FirstLab</string>
    <string name="name">Какая-то кафешка</string>
    <string name="description">Блаблаблаблблаблаблаблаблабаблабалбалбалбалбалбабалбалбалбалбалбалбалблбалббалбалбалбалбалбалбалбалаблбалбалбалбалаблбалбалбалбалбалбалбал</string>
    <string name="phone">Тел. : 8(800)5553535</string>
    <string name="email">E-mail: AaaaAAaAA@AAa.com</string>
</resources>
