<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aaand.firstlab.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:layout_margin="5dp"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/app_name"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/kek" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:theme="@style/AppTheme" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/description"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textColorLink="@color/colorPrimary"
                android:textSize="18sp"
                android:theme="@style/AppTheme" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:autoLink="phone"
                android:padding="5dp"
                android:text="@string/phone"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textColorLink="@color/colorPrimary"
                android:textSize="18sp"
                android:theme="@style/AppTheme" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:autoLink="email"
                android:padding="5dp"
                android:text="@string/email"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textColorLink="@color/colorPrimary"
                android:textSize="18sp"
                android:theme="@style/AppTheme" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
